Fix datastore startup with initializers