@@ -28,8 +28,8 @@ plugins {
     id "maven-publish"
     id 'signing'
     id 'com.github.spotbugs' version '1.6.6'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.10'
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.10'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.21'
 }
 
 description = "Datastore"
@@ -40,7 +40,7 @@ ext.connectionUrl = 'scm:git:https://github.com/openlattice/datastore.git'
 ext.developerConnectionUrl = 'scm:git:https://github.com/openlattice/datastore.git'
 
 distTar {
-    archiveName "$baseName" + ".tgz"
+    archiveFileName "datastore.tgz"
 }
 
 apply from: "https://raw.githubusercontent.com/openlattice/gradles/master/openlattice.gradle"
@@ -77,6 +77,14 @@ if (GC == 'null' || GC == null || GC == "") {
 println "Using java args for running ${projectName}: Xms=" + DS_XMS + ",Xmx=" + DS_XMX + " -server"
 
 applicationDefaultJvmArgs = [DS_XMS, DS_XMX, "-server", GC, PARALLEL]
+applicationDefaultJvmArgs += ["--add-modules java.se",
+                              "--add-exports java.base/jdk.internal.ref=ALL-UNNAMED",
+                              "--add-opens java.base/java.lang=ALL-UNNAMED",
+                              "--add-opens java.base/java.nio=ALL-UNNAMED",
+                              "--add-opens java.base/sun.nio.ch=ALL-UNNAMED",
+                              "--add-opens java.management/sun.management=ALL-UNNAMED",
+                              "--add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+
 sourceCompatibility = JavaVersion.VERSION_1_10
 targetCompatibility = JavaVersion.VERSION_1_10
 
@@ -88,7 +96,7 @@ tasks.withType(Checkstyle) {
 }
 
 spotbugs {
-    toolVersion = '3.1.5'
+    toolVersion = '3.1.9'
 }
 
 tasks.withType(com.github.spotbugs.SpotBugsTask) {
